--- a/package.json
+++ b/package.json
@@ -5,13 +5,27 @@
     "description": "A sample Apache Cordova application that responds to the deviceready event.",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "clean": "rimraf www",
+        "compile": "node build/scripts/compile",
+        "build": "npm run clean && cross-env NODE_ENV=production npm run compile",
+        "start": "cross-env NODE_ENV=development webpack-dashboard -p 1234 -c cyan -m -t react-firebase-redux -- node build/scripts/start",
+        "start:simple": "cross-env NODE_ENV=development node build/scripts/start",
+        "lint": "eslint .",
+        "lint:fix": "npm run lint -- --fix",
+        "codecov": "cat coverage/*/lcov.info | codecov",
+        "prepush": "npm run lint"
     },
     "author": "Apache Cordova Team",
     "license": "Apache-2.0",
     "dependencies": {
         "cordova-ios": "^4.4.0",
-        "cordova-plugin-whitelist": "^1.3.2"
+        "cordova-plugin-whitelist": "^1.3.2",
+        "material-ui": "^0.19.0",
+        "react": "^15.6.1",
+        "react-dom": "^15.6.1",
+        "react-redux": "^5.0.6",
+        "redux": "^3.7.2",
+        "redux-thunk": "^2.2.0"
     },
     "cordova": {
         "plugins": {
@@ -20,5 +34,34 @@
         "platforms": [
             "ios"
         ]
+    },
+    "devDependencies": {
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.2",
+        "babel-plugin-lodash": "^3.2.11",
+        "babel-plugin-syntax-dynamic-import": "^6.18.0",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-plugin-transform-decorators-legacy": "^1.3.4",
+        "babel-plugin-transform-object-rest-spread": "^6.23.0",
+        "babel-plugin-transform-runtime": "^6.15.0",
+        "babel-preset-env": "^1.6.0",
+        "babel-preset-react": "^6.24.1",
+        "chalk": "^2.1.0",
+        "compression": "^1.7.0",
+        "cross-env": "^5.0.5",
+        "css-loader": "^0.28.5",
+        "express": "^4.15.4",
+        "extract-text-webpack-plugin": "^3.0.0",
+        "figures": "^2.0.0",
+        "file-loader": "^0.11.2",
+        "fs-extra": "^4.0.1",
+        "html-webpack-plugin": "^2.30.1",
+        "html-webpack-prefix-plugin": "^0.1.1",
+        "ip": "^1.1.5",
+        "node-sass": "^4.5.3",
+        "rimraf": "^2.6.1",
+        "sass-loader": "^6.0.6",
+        "style-loader": "^0.18.2",
+        "webpack": "^3.5.5"
     }
 }
